--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 
 				<!-- Header -->
 					<header id="header">
+						<div class="logo">
+							<span class="icon fa-gem"></span>
+						</div>
 										<div class="content">
 							<div class="inner">
-								<h1>Ремонт</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								<h1>Naprawa AGD</h1>
+								<p> Czulix electronix tech. </a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
