changed icon to tools

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon screwdriver-wrench"></span>
 						</div>
 										<div class="content">
 							<div class="inner">
 								<h1>Naprawa AGD</h1>
-								<p> Czulix electronix tech. </a> and released<br />
+								<p> Czulix electronix tech. and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
