added tel link to image + removed underscore on href

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						Dodatkowo świadczymy usługi naprawy zepsutych wzmacniaczy muzycznych, gwarantując szybką i profesjonalną obsługę. 
 						Skontaktuj się z nami już dziś, aby uzyskać więcej informacji o naszych usługach naprawczych! <br />
 					</p>
-					<img class="imgfonczyk" src="images/tel.png" alt="Express naprawa ekspresów do kawy oraz elektroniki Bemowo" > 
+					<a style="border-bottom: 0px;" href="tel:730 265 486"><img class="imgfonczyk" src="images/tel.png" alt="Express naprawa ekspresów do kawy oraz elektroniki Bemowo" > </a>
 						<div class="logos">	
 							<img src="images/saeco.svg" alt="repair maintenance naprawa saeco" class="coffelogos"> 
 							<img src="images/delonghi.png" alt="repair maintenance naprawa delonghi" class="coffelogos">
