Added inverted text

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 					
 						<h1>Naprawa AGD na Warszawskim Bemowie</h1>
 					
-					<p> W firmie "Czulix Electronic Tech." naprawiamy ekspresy do kawy i sprzęt AGD: piekarniki, kuchenki elektryczne, okapy.
-						Dodatkowo świadczymy usługi naprawy zepsutych wzmacniaczy muzycznych, gwarantując szybką i profesjonalną obsługę. 
+					<p> W firmie "Czulix Electronic Tech." naprawiamy ekspresy do kawy oraz sprzęt AGD: piekarniki, kuchenki elektryczne, okapy.
+						Dodatkowo świadczymy usługi naprawy zepsutych wzmacniaczy muzycznych i roznego rodzaju <font class="textInverted">elektronicznych plyt</font>, gwarantując szybką i profesjonalną obsługę. 
 						Skontaktuj się z nami już dziś, aby uzyskać więcej informacji o naszych usługach naprawczych! <br />
 					</p>
 					<a style="border-bottom: 0px;" href="tel:730 265 486"><img class="imgfonczyk" src="images/tel.png" alt="Express naprawa ekspresów do kawy oraz elektroniki Bemowo" > </a>
@@ -50,7 +50,7 @@
 			<nav>
 				<ul>
 					<li><a href="#intro">Ceny</a></li>
-					<li><a href="#work">Robota ?</a></li>
+					<li><a href="#work">Robota</a></li>
 					<!-- <li><a href="#about">About</a></li> -->
 					<!-- <li><a href="#contact">Contact</a></li> -->
 					<!-- <li><a href="#elements">Elements</a"></li> -->
