--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="images/tools.png" type="image/png">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="Device repair, electronics PCB repair, naprawa sprzetu AGD, naprawa ekspresow do kawy, naprawa wzmacniaczy muzycznych">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -96,7 +97,7 @@
 			</article>
 
 			<!-- About -->
-			<article id="about">
+			<!-- <article id="about">
 				<h2 class="major">About</h2>
 				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 				<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at
@@ -104,7 +105,7 @@
 					lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada
 					fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum
 					dolor sit amet.</p>
-			</article>
+			</article> -->
 
 			<!-- Contact -->
 			<article id="contact">
@@ -138,7 +139,7 @@
 			</article>
 
 			<!-- Elements -->
-			<article id="elements">
+			<!-- <article id="elements">
 				<h2 class="major">Elements</h2>
 
 				<section>
@@ -384,7 +385,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</form>
 				</section>
 
-			</article>
+			</article> -->
 
 		</div>
 
