Added characters in title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Express Naprawa AGD Bemowo</title>
+	<title>Express Naprawa AGD i elektroniki na Bemowo</title>
 	<icon href="images/settings.png"> 
 	<link rel="icon" href="images/tools.png" type="image/png">
 	<meta charset="utf-8" />
