changed Lix to x

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<ul>
 					<li><a href="#intro">Ceny</a></li>
 					<li><a href="#work">Robota</a></li>
-					<li><a href="https://forum.czulixtech.pl">FORUM NAPRAWY ELEKTRONIKI LixFix</a></li>
+					<li><a href="https://forum.czulixtech.pl">FORUM NAPRAWY ELEKTRONIKI xFix</a></li>
 					<!-- <li><a href="#contact">Contact</a></li> -->
 					<!-- <li><a href="#elements">Elements</a"></li> -->
 				
