--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<!-- End Google Tag Manager -->
 	<title>Express Naprawa AGD i elektroniki na Bemowo</title>
 	<icon href="images/settings.png"> 
-	<link rel="icon" href="images/tools.png" type="image/png">
+	<link rel="icon" href="images/favicon.ico" type="image/ico">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="Device repair, electronics PCB repair, naprawa sprzetu AGD, naprawa ekspresow do kawy, naprawa wzmacniaczy muzycznych">
