--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<nav>
 				<ul>
 					<li><a href="#intro">Ceny</a></li>
-					<li><a href="#work">Robota</a></li>
+					<li><a href="#work">Co robimy?</a></li>
 					<li><a href="https://forum.czulixtech.pl">FORUM NAPRAWY ELEKTRONIKI xFix</a></li>
 					<!-- <li><a href="#contact">Contact</a></li> -->
 					<!-- <li><a href="#elements">Elements</a"></li> -->
