...one more time

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 			<!-- Work -->
 			<article id="work">
-				<h2 class="major">Robota</h2>
+				<h2 class="major">Co robimy</h2>
 				<div> Nasi specjaliści od naprawy sprzętu AGD posiadają bogate doświadczenie i profesjonalne umiejętności. Tu możecie Panstwo sobie zerknąć na zjęcia naszej codziennej pracy 
 					<span class="image main"><img src="images/workimg/krups-2.jpg" alt="naprawa servis krups" /></span>
 					<p>Ekspres KRUPS wymagał wymiany uszczelek tłoka, czyszczenia kanałów wodnych oraz usuwania kamienia i konserwacji.</p>
